# mogs_direct_motion_optimization

./: .gitignore  CMakeLists.txt  MoGS_Direct_Motion_OptimizationConfig.cmake.in  README.md  config_DIRECTOPTIMIZATION.h.in
data/: DirectMotionOptimization_template.xml  DirectOptimArm.xml  ManipulatorArm.xml  Optim.xml  direct_optim.dtd
data/DTD/: direct_optim.dtd
include/: Direct_Motion_Optimization_Holder.h  config_DIRECTOPTIMIZATION.h
src/: Direct_Motion_Optimization_Holder.cpp
